--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,7 @@ include header.html
       | This app runs on #{hostname} (#{os}). Your request came from #{agent}.
       | The system time is #{time.toLocaleString()}.
       |  <strong>Page rendered using Node.js version #{nodeversion}</strong>.
+      | Updated by Hugo Tse for testing v1
 
 #form-section.container
   #x.hero-unit
